# py_get_project_root

./: LICENSE  README.md  get_project_root.py  setup.cfg  setup.py
get_project_root/: __init__.py  get_project_root.py
