# Inside of setup.cfg
[metadata]
description-file = README.md
; name = get_project_root
; version = 0.1.2
; author = bigbizze
; author_email = hpcngmoh@gmail.com
; description = a simple package for resolving project root in most situations
; long_description = file: README.md
; long_description_content_type = text/markdown
; url = https://github.com/bigbizze/py_get_project_root
; project_urls =
;     Bug Tracker = https://github.com/bigbizze/py_get_project_root/issues
; classifiers =
;     Programming Language :: Python :: 3
;     License :: OSI Approved :: MIT License
;     Operating System :: OS Independent
;
; ; [options]
; ; package_dir =
; ;     = get_project_root
; ; packages = find:
; ; python_requires = >=3.6
;
; [options.packages.find]
; where = src